--- a/partial/covid.html
+++ b/partial/covid.html
@@ -41,6 +41,8 @@
 		<img src="img/slider/shield.PNG">
 		<a href="https://3dprint.nih.gov/discover/3dpx-013306">https://3dprint.nih.gov/discover/3dpx-013306</a>
 
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfcByCVSpSzL_7I0WUdu.." width="640" height="1984" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+
 
 	</div>
 </article>
