--- a/partial/covid.html
+++ b/partial/covid.html
@@ -41,7 +41,7 @@
 		<img src="img/slider/shield.PNG">
 		<a href="https://3dprint.nih.gov/discover/3dpx-013306">https://3dprint.nih.gov/discover/3dpx-013306</a>
 
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfcByCVSpSzL_7I0WUdu.." width="640" height="1984" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+		<iframe src="https://vk.com/away.php?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSfcByCVSpSzL_7I0WUduKp1Mca9MS7pUKh1zQROA2FKJ433lw%2Fviewform%3Fembedded%3Dtrue&cc_key=" width="640" height="1984" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
 
 
 	</div>
