--- a/partial/covid.html
+++ b/partial/covid.html
@@ -18,28 +18,29 @@
 		<p>
 			<b>#FLMFS</b> - Fab Lab Moscow Face Shield
 			<br />
+			<img src="img/slider/flmfs.PNG">
 			Изделие состоит из двух основных частей: прозрачного щитка (визора) и рамки. Прозрачный щиток изготавливается из листа полимера PET-A методом лазерной резки. Рамка изготавливается из полиэтилена (HDPE) методом фрезерной обработки на станке с программным управлением. Примыкающие ко лбу кромки обрабатываются с помощью ручного фрезера. Оба используемых полимера устойчивы к дезинфицирующим растворам на основе спирта и соединений хлора.
 		</p>
 		<p>
-			Модель разработана в Fab Lab на основе популярной модели  <a href="https://3dprint.nih.gov/discover/3dpx-013306"><b>#3DVFaceShield</b> </a> и <b>#MMSFS ()</b>. От родительских моделей ее отличают увеличенное расстояние визора от лобового упора и адаптированные для фрезерной обработки обводы заушин.
+			Модель разработана в Fab Lab на основе популярной модели  <a href="https://3dprint.nih.gov/discover/3dpx-013306"><b>#3DVFaceShield</b> </a> и <b><a href="https://github.com/raster/MMS-Face-Shield">#MMSFS</a>></b>. От родительских моделей ее отличают увеличенное расстояние визора от лобового упора и адаптированные для фрезерной обработки обводы заушин.
 		</p>
 		<p>
-			<b>#PRUSA RC3</b> 
+			<b><a href="https://www.prusa3d.com/covid19/">#PRUSA RC3</a></b> 
 			<br />
+			<img src="img/slider/pfs.PNG">
 			Популярная модель от известного разработчика и производителя 3D принтеров чешской компании Prusa. Рамка изготавливается методом 3D печати (FFF) из полимеров PET-G или PLA. Визор изготавливается лазерной резкой из листа PET-A.
 		</p>
 
 		<p>Данная модель имеет максимальное расстояние от визора до лица, что позволяет использовать массивные респираторы с внешними фильтрами.</p>
 
 		<p>
-			<b>#3DVFaceShield</b> 
+			<b<a href="https://3dprint.nih.gov/discover/3dpx-013306">#3DVFaceShield</a></b> 
 			<br />
+			<img src="img/slider/3dv.PNG">
 Популярная модель шведской компании 3DVerkstan. Рамка изготавливается методом 3D печати (FFF) из полимеров PET-G или PLA. Визор изготавливается лазерной резкой из листа PET-A. 
 		</p>
 
 		<p>Данная модель имеет минимальный вес и, возможно, является наиболее комфортной в ношении.</p>
-		<img src="img/slider/shield.PNG">
-		<a href="https://3dprint.nih.gov/discover/3dpx-013306">https://3dprint.nih.gov/discover/3dpx-013306</a>
 
 
 		<p>Если форма не отображается в вашем браузере, пожалуйста, откройте ее в новом окне <a target="blank" href="https://forms.gle/qyubaKhCNwx3E4ZN9">по ссылке.</a></p>
