--- a/partial/covid.html
+++ b/partial/covid.html
@@ -19,6 +19,7 @@
 			<b>#FLMFS</b> - Fab Lab Moscow Face Shield
 			<br />
 			<img src="img/slider/flmfs.PNG">
+			<br />
 			Изделие состоит из двух основных частей: прозрачного щитка (визора) и рамки. Прозрачный щиток изготавливается из листа полимера PET-A методом лазерной резки. Рамка изготавливается из полиэтилена (HDPE) методом фрезерной обработки на станке с программным управлением. Примыкающие ко лбу кромки обрабатываются с помощью ручного фрезера. Оба используемых полимера устойчивы к дезинфицирующим растворам на основе спирта и соединений хлора.
 		</p>
 		<p>
@@ -28,15 +29,17 @@
 			<b><a href="https://www.prusa3d.com/covid19/">#PRUSA RC3</a></b> 
 			<br />
 			<img src="img/slider/pfs.PNG">
+			<br />
 			Популярная модель от известного разработчика и производителя 3D принтеров чешской компании Prusa. Рамка изготавливается методом 3D печати (FFF) из полимеров PET-G или PLA. Визор изготавливается лазерной резкой из листа PET-A.
 		</p>
 
 		<p>Данная модель имеет максимальное расстояние от визора до лица, что позволяет использовать массивные респираторы с внешними фильтрами.</p>
 
 		<p>
-			<b<a href="https://3dprint.nih.gov/discover/3dpx-013306">#3DVFaceShield</a></b> 
+			<b><a href="https://3dprint.nih.gov/discover/3dpx-013306">#3DVFaceShield</a></b> 
 			<br />
 			<img src="img/slider/3dv.PNG">
+			<br />
 Популярная модель шведской компании 3DVerkstan. Рамка изготавливается методом 3D печати (FFF) из полимеров PET-G или PLA. Визор изготавливается лазерной резкой из листа PET-A. 
 		</p>
 
